<resources>
    <string name="app_name" translatable="false">What\'s in the Freezer?</string>
    <string name="activity_main" translatable="false">Inhalt</string>
    <string name="activity_name_add_item" translatable="false">Essen einfrieren</string>
    <string name="settings" translatable="false">Einstellungen</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="newItem" translatable="false">Neue Ware einfrieren</string>
    <string name="filterItems" translatable="false">Filter</string>
    <string name="Kategorie_header" translatable="false">Kategorie</string>
    <string name="activity_name_modify_item" translatable="false">Essen bearbeiten</string>
    <string name="activity_name_show_details" translatable="false">Details</string>

    <string-array name="kategorien" >
        <item>Brot/Semmel</item>
        <item>Fertigprodukt</item>
        <item>Fisch</item>
        <item>Fleisch</item>
        <item>Gemüse</item>
        <item>Glutenfrei</item>
        <item>Obst</item>
        <item>Süßes</item>
        <item>Sonstiges</item>
    </string-array>

    <string-array name="einheiten">
        <item>g</item>
        <item>ml</item>
        <item>St</item>
    </string-array>

    <string-array name="einheitenLabels">
        <item>Gramm</item>
        <item>Volumen</item>
        <item>Stück</item>
    </string-array>

    <string-array name="sortOptions">
        <item>Name</item>
        <item>Kategorie</item>
        <item>Haltbarkeit</item>
        <item>Fach</item>
    </string-array>

    <string-array name="alertTimes">
        <item>3 Tage</item>
        <item>1 Woche</item>
        <item>2 Wochen</item>
        <item>3 Wochen</item>
        <item>4 Wochen</item>
        <item>Nie</item>
    </string-array>

    <string name="item_edit_section_label" translatable="false">Fach %1$d</string>

    <string name="filter_reset_filter" translatable="false">Alle anzeigen</string>
    <string name="filter_item_kategorie" translatable="false">Kategorie</string>
    <string name="filter_item_fach" translatable="false">Fach</string>

</resources>
